--- a/III_OOP/3_5.md
+++ b/III_OOP/3_5.md
@@ -1,12 +1,14 @@
 # Перегрузка операторов Operators overloading
-Перегружаемые операторы:  
-``+ - * / % < > == <= >= << >> & | ^ && || , = += -= /= %= <<= >>= ^= &= |= *(unary) &(unary) -> ++ -- ++(int) --(int) () [] <=>``  
-Неперегружаемые операторы:  
-``. :: ?:``
-Частично перегружаемые:
+***
+* #### Перегружаемые операторы:  
+``+ - * / % < > == <= >= << >> & | ^ && || , 
+= += -= /= %= <<= >>= ^= &= |= *(unary) &(unary) -> ++ -- ++(int) --(int) () [] <=> ! ~``  
+* #### Неперегружаемые операторы:  
+``. :: ?:``  
+* #### Частично перегружаемые:
 ``new delete``
 
-> перегрузка + 
+#### Перегрузка ``+`` 
 ```c++
 class BigInt {
     ....;
@@ -18,3 +20,29 @@ BigInt operator+(const BigInt&, const BigInt&);
 
 a + b == a.operator+(b);
 ```
+#### Перегрузка ``<<`` и ``>>``
+```c++
+std::ostream& operator<<(std::ostream& out, const BigInt& x);
+```
+> Может потребоваться сделать его friend-ом
+#### Перегрузка ``( )``
+```c++
+MyClass f;
+f(1, 2.0, "abc");
+```
+> объявить свой класс ``Compare`` внутри него перегрузить оператор ``( )``
+#### Перегрузка ``[ ]``
+```c++
+class String{
+    ...;
+    char& operator[](size_t index) {
+        ...;
+    }
+};
+```
+#### Перегрузка ``++x x++ --x x--``
+```c++
+BigInt& operator++(); // prefix
+BigInt operator++(int); // postfix
+```
+ 
