--- a/IV_Inheritance/4_3.md
+++ b/IV_Inheritance/4_3.md
@@ -1,7 +1,58 @@
-# Memory layout and ctors/dtors calls order
+# Memory layout and constructors/destructors calls order
 ***
 ```c++
 class Base{
-    
+    int x;
+    char c;
 };
+
+class Derived: Base{ 
+    double d;
+};
+```
+
+> [x(4)][c(4)]...[d(8)]  
+
+```c++
+class Base{
+};
+
+class Derived: Base{ 
+    double d;
+};
+```
+
+> [d(8)] - empty base optimization (EBO)
+
+
+### Порядок создания
+
+```c++
+struct Base{
+    A a;
+};
+
+struct Derived : Base {
+    B b;
+};
+```
+Конструкторы вызываются в таком порядке:
+```c++
+A()
+Base()
+B()
+Derived()
+```
+Деструкторы в обратном:
+```c++
+~Derived()
+~B()
+~Base()
+~A()
+```
+
+### Конструктор наследника
+> сначала делигируется конструирование родителя, потом конструируются поля
+```c++
+Derived(int x, char c, double d) : Base(x, c), d(d) {}
 ```
