--- a/10_Move_Semantics_and_Rvalue_References/10_9.md
+++ b/10_Move_Semantics_and_Rvalue_References/10_9.md
@@ -11,8 +11,8 @@ void reserve(size_t newcap) {
     
     for (size_t i = 0; i < sz; ++i) {
         try {
-            //AllocTraits::construct(alloc, newarr+i, std::move(arr[i]));
-            AllocTraits::construct(alloc, newarr+i, std::move_if_noexcept(arr[i]));
+            //AllocTraits::construct(alloc, newarr + i, std::move(arr[i]));
+            AllocTraits::construct(alloc, newarr + i, std::move_if_noexcept(arr[i]));
         } catch(...) {
             for (size_t j = 0; j < i; ++i) {
                 AllocTraits::destroy(alloc, newarr + i);
@@ -31,4 +31,19 @@ void reserve(size_t newcap) {
     cap = newcap;
     arr = newarr;
 }
+```
+
+
+
+```c++
+
+std::vector<int> v(16);
+
+v.push_back(v[5]); // UB 
+
+// фикс: сначала реаллоцировать
+// потом сделать construct на последнюю позицию
+// потом мувнуть вектор
+// потом ыаыаыаыааа
+
 ```
